nodes/mother/lab/weyland-platform/k8s/dagster/daemon.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dagster-daemon
  namespace: weyland
  labels:
    app: dagster-daemon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dagster-daemon
  template:
    metadata:
      labels:
        app: dagster-daemon
    spec:
      containers:
        - name: dagster-daemon
          image: registry.weyland.lab/weyland-dagster-base:git-c6ece648
          imagePullPolicy: IfNotPresent
          resources:
            requests: { memory: 256Mi, cpu: 100m }
            limits: { memory: 768Mi }
          command: ["dagster-daemon", "run", "-w", "/opt/dagster/dagster_home/workspace.yaml"]
          volumeMounts:
            - name: dagster-config
              mountPath: /opt/dagster/dagster_home/dagster.yaml
              subPath: dagster.yaml
            - name: dagster-workspace
              mountPath: /opt/dagster/dagster_home/workspace.yaml
              subPath: workspace.yaml
      volumes:
        - name: dagster-config
          configMap:
            name: dagster-config
        - name: dagster-workspace
          configMap:
            name: dagster-workspace
